deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eren-server
  labels:
    app: eren-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eren-server
  template:
    metadata:
      labels:
        app: eren-server
    spec:
      containers:
        - name: container
          image: aiogram/telegram-bot-api:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: telegram-data
              mountPath: /var/lib/telegram-bot-api
      volumes:
        - name: telegram-data
          persistentVolumeClaim:
            claimName: telegram-data
---
apiVersion: v1
kind: Service
metadata:
  name: eren-server
spec:
  selector:
    app: eren-server
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eren-server-route
spec:
  to:
    kind: Service
    name: eren-server
  port:
    targetPort: 8080
